--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
 	<div data-role="header">
 		<h1>Sonidos del Dispositivo</h1>
 	</div>
-	<div data-role="content">		
+	<div data-role="listview">		
         <li class="btn b1"> 1 beep </li>
         <li class="btn b2"> 2 beeps </li>
         <li class="btn b3"> 5 beeps </li>
